--- a/ejercicio1/index.html
+++ b/ejercicio1/index.html
@@ -3,12 +3,53 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Page Title</title>
+    <title>Ejercicio 1</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
-    <script src='main.js'></script>
+    <link rel='stylesheet' href='styles.css'>
+
 </head>
 <body>
-    
+
+    <div class="contenedor-flex1">
+        <p>First</p>
+        <p>Second</p>
+        <p >Third</p>
+        <p>Fouth</p>
+        <p>Fith</p>
+        <p>Sixth</p>
+    </div>
+
+    <div class="contenedor-flex2">
+        <p>First</p>
+        <p>Second</p>
+        <p>Third</p>
+        <p>Fouth</p>
+        <p>Fith</p>
+        <p>Sixth</p>
+    </div>
+
+    <div class="contenedor-flex3">
+        <p>First</p>
+        <p>Second</p>
+        <p>Third</p>
+        <p>Fouth</p>
+        <p>Fith</p>
+    </div>
+    <div class="contenedor-flex3b">
+        <p>Sixth</p>
+    </div>
+
+    <div class="contenedor-flex4">
+        <div class="a">First</div>
+        <div class="b">Second</div>
+        <div class="c">Third</div>
+    </div>
+
+    <div class="contenedor-flex5">
+        <p>First</p>
+        <p>Second</p>
+        <p>Third</p>
+    </div>
+
 </body>
 </html>
