--- a/ejercio2/index.html
+++ b/ejercio2/index.html
@@ -3,14 +3,49 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Ejercicio 1</title>
+    <title>Ejercicio 2</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' href='styles.css'>
 
 </head>
 <body>
+    <div>
+        <h1>Introducir los campos de las personas</h1>
+        <div class="contenedor-flex1">
+            <form method="post">
 
-    
-
+                <div class='row'>
+                    <div class='column1'>
+                        <p>Usuario</p>
+                        <p>Apellido</p>
+                        <p>Contraseña</p>
+                        <p>Mail de la compañia</p>
+                        <p>Mail personal</p>
+                        <p>Ciudad</p>
+                        <p>URL de la imagen</p>
+                        <p>Fecha creación</p>
+                        <p>Activado</p>
+                        <p>Fecha finalización</p>
+                        <button class="editar">Editar</button>
+        
+                    </div>
+                    <div class='column2'>
+                        <input type="text" required="">
+                        <input type="text" required="">
+                        <input type="password" required="">
+                        <input type="mail">
+                        <input type="mail" required="">
+                        <input type="text">
+                        <input type="url">
+                        <input type="text">
+                        <input type="checkbox">
+                        <input type="text">    
+                        <button class="limpiar">Limpiar</button>
+                    </div>
+                  </div>
+            </form>
+        </div>
+    </div>
 </body>
 </html>
+
